--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -5,8 +5,8 @@
     padding: 1em 0;
     &__logo-container{
       max-height: 38px;
-      margin-left:1em;
-      margin-top:1em;
+      margin-left:.6em;
+      margin-top:0em;
 
       img{
 
